- [BREAKING CHANGE] StringBuilder has been deleted, its methods merged with CharArray.
- API Addition: Added JsonValue#toJson that takes a Writer.
- API Addition: Added getProgrammaticChangeEvents() to scene2d.ui actors that have setProgrammaticChangeEvents.
- API Addition: Added JsonMatcher, extracts values with pattern matching.
- Fixed crashes when reading the soft buttons bar height on Android.
- Multi sample FBOs can now be used with OpenGL ES 3.0+ instead of OpenGL ES 3.1+

[1.13.5]
- [BREAKING CHANGE] Gradle: snapshot builds are now publishes to https://central.sonatype.com/repository/maven-snapshots/. Update your build scripts and the new repository URL. Some of your other snapshot dependencies might still live on OSSRH, so make sure to keep that repository as well.
- [BREAKING CHANGE] Gradle: The `publish` task now uses jreleaser to publish to Maven Central. The RELEASE_REPOSITORY_URL environment variable is no longer interpreted. SNAPSHOT_REPOSITORY_URL works as before.]
- [BREAKING CHANGE] Android: Updated minSDK to 21. Multidex config is no longer required, please check https://developer.android.com/build/multidex.
- [BREAKING CHANGE] Android: Proguard config line `boolean getUseDefaultContactFilter();` needs to be added. See https://github.com/libgdx/libgdx/pull/7578.
- [BREAKING CHANGE] Android: Removed `AndroidApplicationConfiguration#touchSleepTime`.
- [BREAKING CHANGE] Skin `setEnabled` now only works with actors that implement `Styleable`. Use `setEnabledReflection` for old behavior or add `Styleable` to your actors.
- [BREAKING CHANGE] LWJGL3: The signature of `OpenALLwjgl3Audio#registerSound/registerMusic` has changed. To migrate just replace `registerMusic("myMusic", MyMusic.class);` with `registerMusic("myMusic", MyMusic::new);`
- [BREAKING CHANGE] HorizontalGroup and VerticalGroup set transform false by default.